The transaction has an object list as the task.